<?xml version="1.0"?>
<package format="3">
  <name>elfin_basic_api</name>
  <version>0.0.0</version>
  <description>
    The elfin_basic_api package
  </description>
  <license>BSD</license>

  <author email="liucong.cdhaw@gmail.com">Cong Liu</author>
  <maintainer email="liucong.cdhaw@gmail.com">Cong Liu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>elfin_robot_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>genmsg</depend>

  <depend condition="$ROS_PYTHON_VERSION == 2">wxpython</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-wxgtk4.0</depend>

</package>
