<?xml version="1.0"?>
<package format="2">
  <name>elfin_description</name>
  <version>0.0.0</version>
  <description>
    The elfin_description package
  </description>
  <license>BSD</license>

  <author email="liucong.cdhaw@gmail.com">Cong Liu</author>
  <maintainer email="liucong.cdhaw@gmail.com">Cong Liu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>gezebo_ros_control</exec_depend>

</package>
