<?xml version="1.0"?>
<package format="2">
  <name>elfin_robot_bringup</name>
  <version>0.0.0</version>
  <description>The elfin_robot_bringup package</description>

  <maintainer email="liucong.cdhaw@gmail.com">Cong Liu</maintainer>

  <license>BSD</license>

  <author email="liucong.cdhaw@gmail.com">Cong Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>elfin_ros_control</exec_depend>
  <exec_depend>elfin_ros_control</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
