<?xml version="1.0"?>
<package format="2">
  <name>elfin_ros_control</name>
  <version>0.0.0</version>
  <description>The elfin_ros_control package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="liucong.cdhaw@gmail.com">Cong Liu</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/elfin_ros_control</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="liucong.cdhaw@gmail.com">Cong Liu</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>cmake_modules</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>elfin_ethercat_driver</depend>
  <depend>elfin_robot_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>elfin_hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>transmission_interface</depend>
  <depend>urdf</depend>

</package>
